--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 iniconfig==2.0.0
-packaging==23.2
-pluggy==1.3.0
-pytest==7.4.2
+packaging==24.1
+pluggy==1.5.0
+pyodbc==5.2.0
+pytest==8.3.3
+pytz==2024.2
